* Added filter gradients to left and right sides * Added checkmarks to applied bus route filters (WIP) * backing up!

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,6 +28,7 @@
     <dimen name="fav_button_size">56dp</dimen>
     <dimen name="bottom_nav_height">56dp</dimen>
     <dimen name="fab_size">56dp</dimen>
+    <dimen name="filter_checkmark">24dp</dimen>
 
     <dimen name="top_fab_margin_bottom_gps_enabled">88dp</dimen>
     <dimen name="top_fab_margin_bottom_gps_disabled">@dimen/material_spacing_medium</dimen>
