--- a/app/src/main/res/layout/view_info_window_bus_stop.xml
+++ b/app/src/main/res/layout/view_info_window_bus_stop.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,21 +11,21 @@
             android:id="@+id/bus_stop_key"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true" />
 
         <com.joanzapata.iconify.widget.IconTextView
             android:id="@+id/fav_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:text="{md-star}"
             android:textColor="@color/star"
             android:textSize="@dimen/text_title"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
     </RelativeLayout>
 
@@ -36,15 +35,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/material_spacing_x_small"
-        tools:ignore="MissingPrefix"/>
+        tools:ignore="MissingPrefix" />
 
     <com.nex3z.flowlayout.FlowLayout
         android:id="@+id/bus_routes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/material_spacing_small"
-        app:childSpacing="@dimen/material_spacing_x_small"
-        app:childSpacingForLastRow="align"
-        app:rowSpacing="@dimen/material_spacing_x_small"/>
-
+        app:flChildSpacing="@dimen/material_spacing_x_small"
+        app:flChildSpacingForLastRow="align"
+        app:flRowSpacing="@dimen/material_spacing_x_small" />
+    
 </merge>
