--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,8 @@
 
     <dimen name="bus_route_cell_height">56dp</dimen>
 
+    <dimen name="bus_stop_info_window_width">150dp</dimen>
+
     <!-- FYI: Only applies in MainActivity -->
     <!-- (bus_route_cell_height (56dp) + bus_route_cell_height (8dp) ) = 64dp  -->
     <dimen name="map_padding_top_offset">64dp</dimen>
