--- a/app/src/main/res/layout/view_loading_indicator.xml
+++ b/app/src/main/res/layout/view_loading_indicator.xml
@@ -9,12 +9,12 @@
     android:paddingTop="@dimen/material_spacing_medium">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="@dimen/lottie_loading_view_size"
-        android:layout_height="@dimen/lottie_loading_view_size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:scaleType="centerCrop"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="loading.json"
+        app:lottie_fileName="bus-loading.json"
         app:lottie_loop="true"/>
 
 </FrameLayout>
