* Changed the color of the filter cell background.

--- a/app/src/main/res/drawable/route_filter_right_gradient.xml
+++ b/app/src/main/res/drawable/route_filter_right_gradient.xml
@@ -5,7 +5,7 @@
     <gradient
         android:angle="180"
         android:endColor="@android:color/transparent"
-        android:startColor="@color/colorPrimaryLight"
+        android:startColor="@color/grey"
         android:type="linear" />
 
 </shape>
