--- a/app/src/main/res/layout/cell_bus_route_filter_list.xml
+++ b/app/src/main/res/layout/cell_bus_route_filter_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryLight"
+    android:background="@color/filter_cell_background"
     android:orientation="vertical">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
