--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,11 +14,13 @@
     <color name="white_translucent">#b0ffffff</color>
     <color name="translucent_grey_x40">#40868686</color>
     <color name="translucent_grey_x80">#80868686</color>
+    <color name="grey_light">#F7F7F6</color>
+    <color name="grey">#EEEEEE</color>
     <color name="black">#000000</color>
 
-    <color name="grey_light">#F7F7F6</color>
     <color name="divider">#BDBDBD</color>
     <color name="list_background">@color/white</color>
+    <color name="filter_cell_background">@color/grey</color>
 
     <color name="star">#FFC107</color>
 
